add GeomManager (.h .cpp) meta(object) geom-colour CreateComposite() DrawGeom()

--- a/ODE_Hello.cbp
+++ b/ODE_Hello.cbp
@@ -84,6 +84,7 @@
 			<Option compilerVar="WINDRES" />
 		</Unit>
 		<Unit filename="src/ODE_Hello.cpp" />
+		<Unit filename="src/GeomManager.cpp" />
 		<Unit filename="src/GenComposite.cpp" />
 		<Unit filename="src/TrimeshConvex.cpp" />
 		<Unit filename="src/TrimeshConvexTetra.cpp" />
@@ -93,6 +94,7 @@
 		<Unit filename="src/TrimeshConvexCustom.cpp" />
 		<Unit filename="include/TrimeshConvex.h" />
 		<Unit filename="include/GenComposite.h" />
+		<Unit filename="include/GeomManager.h" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
